# showcov

./: .gitignore  .grobl.config.json  .grobl.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  LIVELOG.md  README.md  TODO.md  USABILITY.md  Untitled  full_git_history.txt  import-linter.toml  justfile  pyproject.toml  ruff.default.toml
.hooks/: check_version_sync.py
scripts/: check_mutation_threshold.py  check_perf_regression.py  check_public_api.py  check_test_markers.py  check_tools.py  flake_report.py  format_ruff.py  mutation_diffs.py  mutation_score.py  print_imports.py  record_test_run.py  report_coverage.py  watch_tests.py
src/showcov/: __init__.py  __main__.py  _meta.py  api.py  cli.py  core.py  io.py  main.py  mcp_server.py  output.py  path_filter.py  run.py  scripts.py
src/showcov/adapters/coverage/: cobertura.py  discover.py  records.py
src/showcov/adapters/render/: human.py  render.py  table.py
src/showcov/cli/: __init__.py  _shared.py  completion.py  diff.py  entry.py  errors.py  exit_codes.py  man.py  report.py  root.py  util.py
src/showcov/commands/: _shared.py  completion.py  diff.py  man.py  report.py
src/showcov/core/: __init__.py  config.py  core.py  coverage.py  dataset.py  enrich.py  exceptions.py  files.py  path_filter.py  pipeline.py  thresholds.py  types.py
src/showcov/core/model/: metrics.py  path_filter.py  report.py  thresholds.py  types.py
src/showcov/coverage/: discover.py  parse.py  types.py  xml_reader.py
src/showcov/data/: mcp_schema.json  schema.json  schema.v2.json
src/showcov/engine/: build.py  enrich.py  pipeline.py
src/showcov/entrypoints/cli/: __init__.py  completion.py  man.py  report.py  root.py
src/showcov/inputs/: cobertura.py  records.py  types.py
src/showcov/mcp/: __init__.py  models.py  server.py
src/showcov/model/: __init__.py  metrics.py  path_filter.py  records.py  report.py  thresholds.py  types.py
src/showcov/output/: __init__.py  base.py  html.py  human.py  json.py  markdown.py  registry.py  render.py  report_render.py  rg.py  sarif.py  table.py  tty.py
src/showcov/render/: human.py  json.py  render.py  rg.py  table.py  tty_summary.py
src/showcov/usecases/: inputs.py  reporting.py
tests/: conftest.py  test_build_report.py  test_cli.py  test_config.py  test_core.py  test_dataset.py  test_diff.py  test_discover_and_xml_reader.py  test_e2e.py  test_enrich.py  test_main.py  test_mcp.py  test_mcp_server.py  test_output.py  test_parse.py  test_path_filter.py  test_renderers.py  test_round_trip.py  test_scripts.py  test_snapshots.py  test_thresholds.py
tests/data/: __init__.py  sample.py
tests/snapshots/: cli_report.json  json_output.json  llm_interaction.json  llm_prompt.txt  mcp_server_payload.json
